Update vercel.json with optimized function configuration
- Increased memory allocation to 512MB for better performance
- Set maxDuration to 10 seconds for API functions
- Removed redundant builds configuration for API functions
- Optimized for serverless function performance

--- a/vercel.json
+++ b/vercel.json
@@ -8,10 +8,6 @@
       "config": {
         "distDir": "build"
       }
-    },
-    {
-      "src": "api/**/*.js",
-      "use": "@vercel/node"
     }
   ],
   "routes": [
@@ -26,7 +22,8 @@
   ],
   "functions": {
     "api/**/*.js": {
-      "runtime": "nodejs18.x"
+      "memory": 512,
+      "maxDuration": 10
     }
   },
   "buildCommand": "cd frontend && npm run build",
